2009-08-15  Per Bothner  <per@bothner.com>

	* CompileMisc.java: New class - compilation/optimization-related
	methods for ArithOp, Compare, BooleanValue.
	* Makefile.am: Update accordingly.
	* ArithOp.java: Keep only runtime-specific parts.
	* Compare.java: Likewise.
	* BooleanValue.java: Likewise.

2009-06-28  Per Bothner  <per@bothner.com>

	* RelativeStep.java (inline): Update for new inlining framework.
	* ValuesFilter.java (inline): Likewise.
	Also re-order things so they're properly scoped.

2008-10-24  Per Bothner  <per@bothner.com>

	* StringUtils.java (makePattern): Fix comment so it doesn't
	break PreProcess.

	* StringUtils.java (matches, replace, tokenize$X): Use coerceToString
	for string argumemts.

2008-09-05  Per Bothner  <per@bothner.com>

	* ValuesFilter.java (compile): Remove special handling of SeriesTarget.

2008-08-02  Per Bothner  <per@bothner.com>

	* QNameUtils.java (lookupPrefix): Don't stop searching if we find
	null uri (for undeclare-namespace), unless prefix also matches.

	* NodeUtils.java (prefixesFromNodetype): Skip bindings with null uri,
	since those "undeclare" any outer matching prefixes.

	* StringUtils.java (makePattern): Fix space-skipping logic.

	* StringUtils.java (makePattern): Map "\p{IsXxxx}" to "\P{InXxxx}".

	* StringUtils.java (replace): Check for invalid use of '\' in
	replacement string.

2008-07-25  Per Bothner  <per@bothner.com>

	* StringUtils.java (encodeForUri, iriToUri, escapeHtmlUri): Use
	coerceToString on parameter.
	(encodeForUri(Object,char)): Remove no-longer-needed method.

	* StringUtils.java (makePattern): With 'x' flag, don't strip spaces
	with '[...]' brackets.

2008-06-16  Per Bothner  <per@bothner.com>

	* NumberValue.java (roundHalfToEven): If value is Double/Float
	and non-finite or zero, return as-is.

2008-01-16  Per Bothner  <per@bothner.com>

	* CastableAs.java (inline): Handle new argsInlined parameter.
	* ArithOp.java (inline): Likewise.
	* CastAs.java (inline): Likewise.